--- a/resources/style.css
+++ b/resources/style.css
@@ -1,8 +1,16 @@
+
+/*....header area....*/
+
 .header {
   display: flex;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  border-bottom: solid black 1px;
+  padding: 15px;
+}
+.header h3 {
+  margin-left: 15px;
 }
 
 h3 {
@@ -10,7 +18,7 @@ display: inline-flex;
 font-size: 14px;
 color: MediumAquamarine;
 flex-grow: 2;
-margin-left: 15px;
+
 }
 
 .nav a {
@@ -24,4 +32,36 @@ color: black;
   flex-grow: 1;
   padding: 10px;
   margin-right: 25px;
+}
+
+/*....main content....*/
+
+.content {
+  display: flex;
+}
+.leftcolumn{
+border: solid black 1px;
+width: 630px;
+}
+
+.middlecolumn {
+border: solid black 1px;
+width: 300px;
+}
+.rightcolumn {
+border: solid black 1px;
+width: 240px;
+}
+
+/*....News Stories....*/
+
+.orca
+.burger
+.earth
+.research {
+  border: solid black 1px;
+}
+.content h3 {
+  color: black;
+  font-size: 20px;
 }
