Add remainder of CSS styling

--- a/resources/style.css
+++ b/resources/style.css
@@ -51,6 +51,7 @@ color: black;
 width: 630px;
 display: flex;
 flex-direction: column;
+justify-content: flex-start;
 }
 
 .middlecolumn {
@@ -64,7 +65,7 @@ display: flex;
 flex-direction: column;
 }
 
-/*....News Stories....*/
+/*....News Stories, left column....*/
 
 .mother {
 }
@@ -81,14 +82,18 @@ flex-direction: column;
 .leftstories {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
 }
 .orca {
   flex: 1;
-  min-width: 300px;
+  flex-basis: 280px;
+  padding-right: 20px;
+  padding-bottom: 50px;
 }
 .burger {
   flex: 1;
-  min-width: 300px;
+  flex-basis: 280px;
+  padding-bottom: 50px;
 }
 .earth {
   font-family: Georgia;
@@ -101,7 +106,8 @@ flex-direction: column;
   text-align: center;
   background-image: url("images/img-story-2.png");
   flex: 1;
-  min-width: 300px;
+  flex-basis:  280px;
+  margin-right: 20px;
 }
 
 .research {
@@ -114,9 +120,73 @@ flex-direction: column;
   order: 4;
   text-align: center;
   background-image: url("images/img-story-3.png");
-  min-width: 300px;
+  flex-basis: 280px;
   height: 300px;
 }
 
+/*..New Stories middle column..*/
 
-.cats
+.cats {
+  font-family: Georgia;
+   font-weight: bold;
+   font-size: 30px;
+   color: white;
+   display: flex;
+   text-align: center;
+   background-image: url("images/img-story-1.png");
+   flex-basis: 280px;
+   height: 300px;
+}
+
+/*..New Stories right column..*/
+.cookie {
+  display: flex;
+  background-image: url("images/img-news-bite.png");
+  flex-basis: 280px;
+  height: 300px;
+}
+.bites  {
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-around;
+}
+//*.newsbitelist {
+    background-color: WhiteSmoke;
+    font-family: Verdana;
+    font-size: 12px;
+    color: DimGray;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;*/
+}
+
+//*.newsbitelist ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
+  margin: 0;*/
+
+}
+
+.rightstyle {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.newsbitelist ul {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  list-style: none;
+}
+.newsbitelist li {
+  border-bottom: solid black 1px;
+  align-self: flex-start;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
