--- a/resources/style.css
+++ b/resources/style.css
@@ -141,7 +141,6 @@ flex-direction: column;
 /*..New Stories right column..*/
 .cookie {
   display: flex;
-  background-image: url("images/img-news-bite.png");
   flex-basis: 280px;
   height: 300px;
 }
@@ -150,26 +149,6 @@ flex-direction: column;
   font-weight: bold;
   display: flex;
   justify-content: space-around;
-}
-//*.newsbitelist {
-    background-color: WhiteSmoke;
-    font-family: Verdana;
-    font-size: 12px;
-    color: DimGray;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;*/
-}
-
-//*.newsbitelist ul {
-  display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-direction: column;
-  width: 100%;
-  align-items: flex-start;
-  margin: 0;*/
-
 }
 
 .rightstyle {
@@ -189,4 +168,25 @@ flex-direction: column;
   align-self: flex-start;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 300px;
+}
+.footer span {
+  padding: 10px;
+}
+.footer h5 {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 25px;
+  border-right: solid white 2px;
 }
