--- a/resources/style.css
+++ b/resources/style.css
@@ -140,9 +140,7 @@ flex-direction: column;
 
 /*..New Stories right column..*/
 .cookie {
-  display: flex;
-  flex-basis: 280px;
-  height: 300px;
+  height: 240px;
 }
 .bites  {
   font-size: 16px;
@@ -151,21 +149,16 @@ flex-direction: column;
   justify-content: space-around;
 }
 
-.rightstyle {
-  display: flex;
-  justify-content: flex-start;
-}
 
-.newsbitelist ul {
+
+
+.newsbitelist .bite {
+  display: block;
   background-color: WhiteSmoke;
   font-family: Verdana;
   font-size: 12px;
   color: DimGray;
-  list-style: none;
-}
-.newsbitelist li {
   border-bottom: solid black 1px;
-  align-self: flex-start;
   padding-top: 10px;
   padding-bottom: 10px;
 }
